# 32-bit-Emulator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  NOTES.txt  README.md  todo.txt
core/: CMakeLists.txt  build.bat  build.sh  clean-build.bat  clean-build.sh  valgrind.supp
core/app/: AlienCPUAssembler.cpp  AlienCPUAssembler.h  CMakeLists.txt  Version.h  Version.h.in  build.bat  build.sh  clean-build.bat  clean-build.sh  clear-build-and-install-folders.bat  configure-and-build.bat  configure.bat  main.cpp  process_management.txt
core/app/Emulator/: AlienCPU.h  BIOS.cpp
core/app/Files/: preprocessorTest.basm
core/app/cmake/: GenerateVersion.cmake
core/app/programs/include/: showcase_preprocessor.binc
core/app/programs/src/: fibonacci.basm  fibonacci.bi  long_loop.basm  palindrome.basm  showcase_preprocessor.basm  showcase_preprocessor.bi
core/app/src/: kernel.cpp  main.cpp  process_management.txt  version.h
core/app/temp_files/src/: main.basm
core/app/tests/: disk.bin.info  preprocessorTest.bexe
core/app/tests/src/: include.binc  main.basm  main.bi  other.basm  otherFile.bi  otherFile.bo  preprocessorTest.basm  preprocessorTest.bi  preprocessorTest.bo
core/assembler/: CMakeLists.txt  build.bat  configure-and-install.sh  install.bat
core/assembler/include/assembler/: Assembler.h  AssemblyType.h  Build.h  Linker.h  LoadExecutable.h  ObjectFile.h  Preprocessor.h  StaticLibrary.h  Tokenizer.h  assembler.h  build.h  linker.h  load_executable.h  object_file.h  preprocessor.h  static_library.h  tokenizer.h
core/assembler/src/: Assembler.cpp  Build.cpp  Directives.cpp  Directory.cpp  ExecutableFile.cpp  File.cpp  Instructions.cpp  Linker.cpp  LoadExecutable.cpp  ObjectFile.cpp  Preprocessor.cpp  StaticLibrary.cpp  Tokenizer.cpp  assembler.cpp  build.cpp  default_linker.ld  directives.cpp  instructions.cpp  linker.cpp  load_executable.cpp  main.cpp  object_file.cpp  preprocessor.cpp  static_library.cpp  tokenizer.cpp
core/assembler/temp_files/: notes_ex_proj_files.txt  notes_objfile.txt
core/assembler/test/: CMakeLists.txt  build.bat  build.sh
core/assembler/test/preprocessor_test/: conditional.cpp  (+4 more)
core/assembler/test_files/: Notes_Assembler.txt  Notes_ObjectFile.txt  Notes_Preprocessor.txt  notes_assembler.txt  notes_preprocessor.txt  temp.basm
core/assembler/tests/: CMakeLists.txt  disk.bin.info
core/ccompiler/: CMakeLists.txt  build.bat  build.sh  clean-build.bat  clean-build.sh
core/ccompiler/lib/: crt.basm
core/ccompiler/sample/: simple.c
core/ccompiler/src/: ccompiler.c  codegen.c  lexer.c  main.c  massert.c  parser.c  preprocessor.c  stringbuffer.c  util.c  vector.c
core/ccompiler/tests/: CMakeLists.txt
core/cmake/: GenerateVersion.cmake
core/emulator32bit/: CMakeLists.txt  notes.txt
core/emulator32bit/src/: Disassembler.cpp  Disk.cpp  Emulator32bit.cpp  FreeBlockList.cpp  Instructions.cpp  Memory.cpp  SoftwareInterrupt.cpp  SystemBus.cpp  VirtualMemory.cpp  better_virtual_memory.cpp  disassembler.cpp  disk.cpp  emulator32bit.cpp  fbl.cpp  fbl_inmemory.cpp  instructions.cpp  main.cpp  memory.cpp  software_interrupt.cpp  system_bus.cpp  timer.cpp  virtual_memory.cpp
core/emulator32bit/test/: CMakeLists.txt  Emulator32bitTest.cpp  Test.cpp  build.bat  build.sh
core/emulator32bit/tests/: CMakeLists.txt  emulator32bit_test.cpp
core/emulator6502/: CMakeLists.txt  configure-and-install.bat
core/emulator6502/src/: AddressingModesUtil.cpp  AlienCPU.cpp  InstructionLinker.cpp  Instructions.cpp  Motherboard.cpp  Motherboard.h
core/integration_tests/: CMakeLists.txt  todo.txt
core/src/: version.h  version.h.in
core/util/: CMakeLists.txt  configure.bat
core/util/src/: Directory.cpp  File.cpp  Logger.cpp  Types.cpp  directory.cpp  file.cpp  logger.cpp  loggerv2.cpp  types.cpp
core/util/tests/: CMakeLists.txt  util_test.cpp
tests/: AlienCPU6502Tests.cpp  AlienCPU6502Tests.h  AlienCPUPerformanceTests.cpp  AlienCPUTest.h  AlienCPUTests.cpp  AlienCPUTests.h  CMakeLists.txt  TestUtil.h  build.bat  clean-build.bat
tests/AssemblerTests/: AssemblerTests.cpp
tests/AssemblerV3Tests/: AssemblerTests.cpp
tests/AssemblerV3Tests/Files/: filepath.binc  include.binc  preprocessorTest.basm  preprocessorTest.bi  preprocessorTest.i  preprocessorTest.prep.basm
tests/InstructionTests/: LDATest.cpp
tests/InstructionTests/Arithmetic/: ADCTest.cpp  DECTest.cpp  DEXTest.cpp  DEYTest.cpp  INCTest.cpp  INXTest.cpp  INYTest.cpp  SBCTest.cpp
tests/InstructionTests/ArithmeticOperations/: ADCTest.cpp  SBCTest.cpp
tests/InstructionTests/DecrementAndIncrement/: DECTest.cpp  DEXTest.cpp  DEYTest.cpp  INCTest.cpp  INXTest.cpp  INYTest.cpp
tests/InstructionTests/DecrementAndIncrementTests/: DECTest.cpp  DEXTest.cpp  DEYTest.cpp  INCTest.cpp  INXTest.cpp  INYTest.cpp
tests/InstructionTests/Flag/: CLCTest.cpp  CLDTest.cpp  CLITest.cpp  CLVTest.cpp  SECTest.cpp  SEDTest.cpp  SEITest.cpp
tests/InstructionTests/Logic/: ANDTest.cpp  EORTest.cpp  ORATest.cpp
tests/InstructionTests/LogicalOperations/: ANDTest.cpp  EORTest.cpp  ORATest.cpp
tests/InstructionTests/ShiftAndRotate/: ASLTest.cpp  LSRTest.cpp  ROLTest.cpp  RORTest.cpp
tests/InstructionTests/Stack/: PHATest.cpp  PHPTest.cpp  PLATest.cpp  PLPTest.cpp  StackTest.cpp
tests/InstructionTests/Transfer/: LDATest.cpp  LDXTest.cpp  LDYTest.cpp  STATest.cpp  STXTest.cpp  STYTest.cpp  TAXTest.cpp  TAYTest.cpp  TSXTest.cpp  TXATest.cpp  TXSTest.cpp  TYATest.cpp  TransferRegistersTest.cpp
tests/InternalTests/: MemoryAddressingTest.cpp  ResetTest.cpp  StackTest.cpp  StatusFlagTest.cpp  ValidInstructionTest.cpp
tests/assembler_tests/: AssemblerTests.cpp  assembler_tests.cpp
tests/assembler_tests/files/: include.binc  preprocessorTest.basm  readFromFile.txt
tests/emulator6502_tests/: AlienCPUTests.cpp
tests/emulator6502_tests/InternalTests/: MemoryAddressingTest.cpp  ResetTest.cpp  StackTest.cpp  StatusFlagTest.cpp  ValidInstructionTest.cpp
tests/emulator6502_tests/PerformanceTests/: AlienCPUPerformanceTests.cpp
tests/include/emulator6502_tests/: AlienCPUTest.h
(+354 files in other folders)
